--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -33,7 +33,13 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank">港人给抗议者们写圣诞卡：以后再庆祝</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg" align ="left"></a>香港民主运动持续进行。圣诞节将近，抗议者们没有因此放松，在坚持抗争的同时，他们还不忘给受伤和被拘留的手足们写圣诞贺卡，送上自己的一份鼓励和祝福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728394.md#1" target="_blank">增购美农产品 传北京拟取消乙醇报复关税</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/06/606011244111703-150x120.jpg" align ="left"></a>多数专家关注，北京如何兑现未来两年内增购至少320亿美元美国农产品的承诺。根据目前传出的更多细节，中方拟取消对美国乙醇所实施的报复性关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank">大马前总理卷入新案 涉下令谋杀蒙古模特</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/GettyImages-991185274-150x120.jpg" align ="left"></a>深陷腐败指控的马来西亚前总理纳吉布·拉扎克（Najib Razak），近日又被卷入了一桩谋杀蒙古模特的丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731657.md#1" target="_blank">清华大学90后共青团官员校内溺亡</a><br></h3>日前，90后的清华大学团委科创中心主任朱某（朱小亮）在校园内坠河身亡的消息，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank">【翻墙必看】PCC雇用薄瓜瓜“令人吃惊”</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/1204120831291758-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.薄熙来之子薄瓜瓜 最新行踪曝光
+在公众视野中消失了很久的薄熙来的儿子——薄瓜瓜，正在加拿大鲍尔集团股份有限公司（Power Corporation of Canada，简称 PCC）工作。有人认为，PCC雇用薄瓜瓜是为了保持和中共权贵的关系。
+
+2.中共走投无路 军队押送“中美协议”过关
+经过18个月的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11729559.md#1" target="_blank">中共航母山东舰交付仪式 多名高官缺席</a><br></h3>日前，中共第一艘航空母舰山东舰交付海军。这次交付仪式打破了以往的几个惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/ncid277_3.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid277_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/ncid277_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_3.htm">http://www.epochtimes.com/gb/ncid277_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
