--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -8,7 +8,8 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank">浙江一印染厂污水罐倒塌 致9死4重伤</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262085163-150x120.jpg" align ="left"></a>昨日（3日）17时19分许，浙江海宁市许村镇龙洲印染有限公司污水罐爆炸，导致货架倒塌，截止4日凌晨，共救出22人，其中7人死亡。据悉该涉事印染公司曾多次遭到行政处罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank">中疾控报告：内蒙肺鼠疫患者疑似感染源</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-87219901-150x120.jpg" align ="left"></a>中国疾病预防控制中心（中疾控）披露，来自内蒙古的两例肺鼠疫夫妻患者，丈夫很可能在自家农场挖土时吸入带有鼠疫菌的气溶胶感染，妻子与丈夫接触而感染。另一名腺鼠疫患者给死野兔剥皮后被感染。前两例患者和第三例患者之间无流行病学关联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/2/n11696217.md#1" target="_blank">中共称艾滋患者95.8万 老年感染人数增</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/2/n11696217.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dcad95557007a1_ttl7day2qK_VCG111179199203-150x120.jpg" align ="left"></a>12月1日是“世界艾滋病日”。据中共官方近日公布数据，中国大陆现存艾滋感染者95.8万人，老年男性艾滋病感染人数增加明显。有网民表示，在中共党政官员带头嫖妓下，不自重的人太多了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank">沈阳市住宅高楼大火 火势凶猛 伤亡不明</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-150x120.jpg" align ="left"></a>12月2日晚21点30分左右，沈阳市浑南区的SR国际新城住宅区发生大火，火光冲天，目前伤亡不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11715631.md#1" target="_blank">内蒙古通辽市高速路上大客车侧翻 致53伤</a><br></h3>12月11日上午10时5分左右，内蒙古通辽市高速G2511高速公路甘旗卡段124km处，发生一起大客车侧翻事故，导致53人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714843.md#1" target="_blank">河南一村民用三轮摩托载6人坠崖 6死1伤</a><br></h3>12月10日下午，河南省巩义市发生一起三轮摩托车意外坠崖伤亡事件，致6人死亡1人受伤，伤者尚未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11714742.md#1" target="_blank">唐山地震后北京昌平又地震 网民：今年反常</a><br></h3>中国地震台网正式测定，昨晚深夜，即12月10日22时28分，北京昌平区（北纬40.30度，东经116.37度）发生2.0级地震，震源深度18千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11712523.md#1" target="_blank">安徽六安高速路接连发生车祸 共致6死10伤</a><br></h3>12月10日、7日，安徽六安段高速路均发生交通事故，共造成6人死亡，10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/10/n11712260.md#1" target="_blank">阴霾天大陆多地航班延误 通行能力降50％</a><br></h3>12月10日，大陆多地部分机场因阴霾天气影响，能见度低，出现大面积延误情况，包括乌鲁木齐地窝堡机场、济南遥墙机场、青岛流亭机场、石家庄正定机场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:15 PM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/3/n11697025.md#1" target="_blank">北京顺义一豆馅厂房爆炸 4死10伤</a><br></h3>12月3日另成3时7分左右，北京顺义区牛栏山镇京日东大食品有限公司一加工豆馅厂房发生爆炸。截止目前，4人死亡10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/2/n11694762.md#1" target="_blank">河南邓州拆除老电视塔 砸死1人致2伤</a><br></h3>12月2日上午11时18分左右，河南南阳邓州市老广播电视塔在拆除作业过程中，几十米长的起重机臂突然断裂，导致1死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/ncid280_2.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/ncid280_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/ncid280_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_2.htm">http://www.epochtimes.com/gb/ncid280_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
