--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -2,7 +2,6 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/7/12/24/n1952735.md#1" target="_blank">艺术的时空之旅（十）传统油画技法探究（三）</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/7/12/24/n1952735.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/201910233-320x200.jpg" align ="left"></a>即使一幅不大的多层罩染技法油画也需要数倍于直接技法的时间来完成，这就是为何古代大师们往往花费数月甚至数年的时间才能完成一幅画的原因之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:23 PM	</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726598.md#1" target="_blank">法官蒙冤下狱 却见证奇迹</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/110413151531100445_1-150x120.jpg" align ="left"></a>这个故事的其中一位主人翁叫做董雄，他自年少起，就诚信神佛。贞观十四年春天，当时董雄担任大理寺的官员，因受到季仙僮事件的牵连，被上了枷锁，囚禁在御史台。当时，一同受牵连被扣押的十多人。其中大理丞李忻玄、司直王忻与董雄关在同一牢房，而且每个人都被铁索牢牢地锁着。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank">【医案】我性本明</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1609281625492483-150x120.jpg" align ="left"></a>针灸治疗1个月后，女主管精神好很多，工作忙也不那么疲倦。但每次来诊都赶最后一班针灸，到诊时都是满脸倦容，我问女主管：“你刚下班啊？忙到那么晚！”她说她下班以后，去参加各种活动，每天把时间塞满，把精力耗光，等晚上10点回到家，累垮就睡了。冷不防，我一针见血就说：“你在逃避孤独、寂寞？你不想面对你自己！”女主管顿时傻眼！低.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:02 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739229.md#1" target="_blank">美国师资紧缺 菲律宾女子获聘乡村教师</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-943899352-150x120.jpg" align ="left"></a>提尔多瑞是来自菲律宾的年轻教师。她应聘来到科罗拉多州郊县的一所高中做数学教师，负责教代数和几何课。由于身材小巧，提尔多瑞总是被误以为是外籍高中生。和她的学生们站在一起，提尔多瑞的高度常常只到他们的肩膀。对于一名来自异国、讲话略带口音的美国高中教师，“第一年的教学让我遇到不少挑战，主要在获得学生的信任方面。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank">天地清明引(145) 东流水－君臣生隙1</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>金府。楚淮阳禀报：“已按老爷吩咐，放出风去，言金府高价收购药草。但是现下大疫正盛，百姓手中但有草药，皆留置自用，无人肯售。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
@@ -27,6 +26,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank">【命理】八字中怎样看子女？</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f72c63cef6247cb4eac123f052e8173d-150x120.png" align ="left"></a>八字看子女，简单来说，最常见的就是看子星和子女宫（简称指子宫，下同），子宫是指时柱地支。其次是看子女星。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank">天地清明引(143) 东流水－宫椽倾圮2</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/Peach_Festival_of_the_Queen_Mother_of_the_West_Freer_Gallery_of_Art-150x120.jpg" align ="left"></a>刑部大牢，金海困于此地已有三日之久。眼见残酷刑罚，耳听严刑拷打，口尝馊饭脏水，鼻闻血腥恶臭，每日每夜惊吓不已，胡思乱想，险些又疯癫过去。是日，牢门再开，被两个衙役拖了出去，一桶冰水从头浇到脚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank">【三国英雄】之六：曹操的张良和青州兵</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ad563d3fb25ead5c3c447234f33cecaa-150x120.jpg" align ="left"></a>青州兵从黄巾军起家，被曹操收编，跟随曹操征战四方，在曹操去世后解散，就像上天给予曹操的兵器，随着曹操走上历史舞台，又随着曹操走下历史舞台，让人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:51 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之美</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bb24246b23689719ee2e4543c53f6005-150x120.jpg" align ="left"></a>生活中当人们心生烦恼，往往会寄情于山水，无论是“掬水月在手，弄花香满衣”还是“空山新雨后，天气晚来秋，明月松间照，清泉石上流”，又或是“疏影横斜水清浅，暗香浮动月黄昏”，人们在自然之中让心灵得以释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738830.md#1" target="_blank">五律：诗（四）</a><br></h3> 明月长挥景，幽篁好抚琴。 庄生梦蝴蝶，望帝寄春心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739866.md#1" target="_blank">唐浩：全球反共</a><br></h3>红朝败落假大空   暴恶残民亿万蒙   四海围击正气聚   百年赤祸散尘空......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738924.md#1" target="_blank">青春期的我们需要家长的理解和关心</a><br></h3>青春期的我们，受到激素的影响，心中会有很多的想法............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:51 AM			</td></tr>
