--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -27,6 +27,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank">海风：中共政权即将崩溃的十大预兆</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1504210527312039-600x400-150x120.jpg" align ="left"></a>—个政权在崩溃前就像一个久病将亡的病人，它必将会出现死亡前的各种预兆。历史学家曾经总结了历代王朝在灭亡前将会普遍出现的十大征兆：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank">李靖宇：从台湾网红波特王遭中共打压谈起</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/maxresdefault-600x400-1-150x120.jpg" align ="left"></a>Youtuber网红波特王与台湾总统蔡英文合作拍片，影片创下高流量；不料中国合作方“徐州自由自在网路科技公司”要求影片不能出现“总统”字眼，......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank">程晓农：十二个字读懂美中经贸谈判</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/15c9f8864d19e1f7_ttl7day1IM_05-150x120.jpg" align ="left"></a>我用十二个字来解读美中经贸谈判：对川普来说，不打是打，不罚是罚；对中共来说，赢就是输。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731471.md#1" target="_blank">王赫：中共首艘自制航母入列日期的玄机</a><br></h3>12月17日，舷号为17的中共第一艘国产航空母舰山东舰在海南省三亚军港入列，习近平出席仪式、授旗。这有一个“巧合”：历史上的今天，1888年12月17日（清光绪十四年冬月十五），北洋水师于山东威海卫刘公岛正式成立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:42 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731117.md#1" target="_blank">张林：毛泽东靠什么为所欲为？</a><br></h3>毛泽东本来是苏联独裁者史达林扶植的儿皇帝，但是他的管理共产党的手段，与苏联人主要依靠制度，有很大的不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11729906.md#1" target="_blank">云鹤天：中共的心态</a><br></h3>旷日持久贸易战
 
@@ -65,6 +66,5 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/6/n11706337.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（9）</a><br></h3>一般把推理看作是“使用理智从某些前提产生结论”的行动。按照亚氏逻辑学的观点，前提和结论都是用判断或命题，推理是把判断或命题按照理智的方式连接起来。判断或命题是把词或概念用一些词（如关系词“BE”）连接起来。理智在亚氏逻辑学中，一般理解为符合理性行为公理，如不循环（传递性）、不矛盾（一致性）等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11727270.md#1" target="_blank">夏祷：愿荣光归台湾（下）?</a><br></h3>2014年，台湾、香港先后发生了太阳花运动和占中运动。学生们攻入立法院，坐上了议场主席台，在国父孙中山先生画像下高悬占领立法院的天数。太阳花学运最终促使台湾搁置了两岸服贸协议，延缓了中共企图通过贸易对台湾的深层渗透。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/16/n11725968.md#1" target="_blank">夏小强：美中第一阶段贸易协议得失谈</a><br></h3>此次美中达成的第一阶段贸易协议，总体上是中共妥协退让的成分占多，从结果来讲，美方的得大于失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 8:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
