--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -20,7 +20,7 @@
 
 波特王的中国合作方要求他视频中不能出现台湾“总统”，同时他拥有100多万粉丝的微博账号.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731926.md#1" target="_blank">袁斌：复旦改章程 中共撕下大学的遮羞布</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-600x400-1-150x120.jpg" align ="left"></a>今天一则复旦学生唱校歌的视频在微信群里火了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731215.md#1" target="_blank">赖锦东：从信仰高度看中美贸易战</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/caifu-150x120.jpg" align ="left"></a>政教分离是指政府与教会的分立，各司其职、各负其责。但是，政教分离绝不是政治与信仰的分离，相反，政治当顺服于信仰，政治的价值观根植于信仰之中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736839.md#1" target="_blank">项云：痞子流氓无赖思维行为方式一直是中共武器</a><br></h3>今天中共对国内百姓就像在香港一样明火执仗，剥掉过去所有伪装，各领域全面赤膊上阵赤裸裸对百姓“痞子流氓无赖”式欺压。过去好话说尽坏事做绝，现在好话欺骗程序全无，直接对人民抢夺榨取或打杀，其实这才是中共真实面目。中共欺骗手段已经图穷匕见，人民不再买账才凶相毕露。当然这是亡党末日疯狂，共产内部明白人此时应该像王立强那样弃暗投.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736962.md#1" target="_blank">心升：从《矛盾论》《实践论》的谬误揭去毛泽东哲学家的面纱</a><br></h3>人们把毛泽东的《矛盾论》、《实践论》看成是伟大的哲学著作，倍加推崇，甚至在否定他的人格时还认为他的哲学水平是不容置疑的。其实这完全是被他那套偷天换日、偷换概念、偷梁换柱的邪恶伎俩欺骗了。在矛盾论中，一上来就谈到两种宇宙观的问题，毛泽东在此用形而下学的表现，（他没有提到形而下学这个名词，可是，他名为说形而上学的表现，实际.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736929.md#1" target="_blank">伍新： 习近平赌城赌气行</a><br></h3>澳门庆典又摆阔，万马千军护一桌。
 场似访朝当外宾，阵如戒严防刺客。
