--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -23,7 +23,7 @@ Jason Tao熟悉旧金山、湾区房地产.........<br><img align="bottom" src="http://www.
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736546.md#1" target="_blank">多肉植物种在壁画板上　打造自己的小花园</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/plant-2754303_1280-150x120.jpg" align ="left"></a>前言：收录了近150张疗愈感十足的多肉植物与多肉组合作品照片，以及46则关于多肉植物如何帮助小琬老师、以及其他人“转面向”，一同度过人生的低谷与低潮的真实故事?小琬老师要与读者们分享她在“天、人、地”之间的生命体悟与感受，教你在多肉植物的小世界中学习“向内突破”，你将学会如何向植物学习－－找到你的自在，你的生命姿态?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732695.md#1" target="_blank">日高三生每天8小时苦练3年画出拟真动物</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b4d79488cff40fb38e8624476c1c2a31-150x120.jpg" align ="left"></a>日本一位就读高三的爱画画少年，他仅靠着120色的色铅笔，完成了多幅跃然纸上、栩栩如生的动物画，作品在网路上热传之后，引起多家媒体报导，也获得很多展览作品的机会。然而这些好成绩是他用3年的时间，每天练习8小时苦练出来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736552.md#1" target="_blank">国王企鹅住在日本家庭里 会自己到市场买鱼</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736552.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-52091396-150x120.jpg" align ="left"></a>在人们的印象中，企鹅应该是生长在寒冷的南极，但日本却有一个家庭曾经养了一只宠物企鹅，它甚至会自己走到市场买鱼来吃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank">冬至养精蓄锐事半功倍  医师荐五种好药膳</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/6544abeea6e33447f1ff984964dec67b-150x120.jpg" align ="left"></a>为何冬至要补肾？为何此时养精蓄锐事半功倍？阴阳五行养生的方法怎么作？告诉你常用好用养肾的好药膳食方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank">冬至养精蓄锐事半功倍 中医荐五种好药膳</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/6544abeea6e33447f1ff984964dec67b-150x120.jpg" align ="left"></a>为何冬至要补肾？为何此时养精蓄锐事半功倍？阴阳五行养生的方法怎么作？告诉你常用好用养肾的好药膳食方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732332.md#1" target="_blank">酸奶：益肠道又饱腹 流传万年的饮食智慧</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11732332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yogurt_229091863-copy-150x120.jpg" align ="left"></a>在冷藏技术普及前，人们很少饮用鲜乳，大部分人食用的都是酸奶等经发酵的乳品。酸奶已有1万年的历史。最早的酸奶可能出现在安纳托利亚高原一带。古代牧民将羊奶储存在羊皮袋中，乳汁与皮袋上的原生菌种自然发酵，成为了酸奶。yogurt一词，可能来自土耳其语的yo?urmak，意思是变稠或凝结。乳汁的来源则可能是牛、羊......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735109.md#1" target="_blank">2020年流行狗名预测  你家宠物上榜了吗？</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11735109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_194083291_Subscription_L-150x120.jpg" align ="left"></a>养宠物的第一件事，就是帮它们取一个好名字。日前，TastyBone公司公布2020十大流行宠物名，其中漫威、DC的漫画人物，或是迪士尼的动画角色，都受到许多狗主人的青睐。此外，还有哪些名字呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733400.md#1" target="_blank">一杯黄耆山楂饮 预防三高 还清血管垃圾</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11733400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shanzhahuangqi-1220-150x120.jpg" align ="left"></a>你有“三高”的问题吗？高血压、高血脂、高血糖已成为现代人健康的杀手，稍有不慎，可能引发各种疾病，不可不防。一味黄耆山楂饮，可以帮你降三高。降三高的黄耆山楂饮煮法：准备黄耆6钱、山楂3钱。将药材放入保温杯中，直接泡入约500毫升沸水，30分钟后饮用。黄耆有补气的效果，民间常用于煮茶饮。山楂能消食化积、活血化瘀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:43 PM			</td></tr>
