--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,7 +27,7 @@
 几天之后，从胶东半岛来了一对父女。父亲人到中年，个头不高，那永远都在微笑的眼睛，和煦清澈，像清晨的一缕阳光，让人一见之下，顿生亲近之意。
 
 只是那个女儿，面色苍白，双目无神，坐在那里.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank">冬至养精蓄锐事半功倍  医师荐五种好药膳</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/6544abeea6e33447f1ff984964dec67b-150x120.jpg" align ="left"></a>为何冬至要补肾？为何此时养精蓄锐事半功倍？阴阳五行养生的方法怎么作？告诉你常用好用养肾的好药膳食方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank">冬至养精蓄锐事半功倍 中医荐五种好药膳</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/6544abeea6e33447f1ff984964dec67b-150x120.jpg" align ="left"></a>为何冬至要补肾？为何此时养精蓄锐事半功倍？阴阳五行养生的方法怎么作？告诉你常用好用养肾的好药膳食方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/9/5/31/n2543533.md#1" target="_blank">阴间当差的老姥爷：人干了什么 神都给你记着</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/9/5/31/n2543533.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/1707122157222483-150x120.jpg" align ="left"></a>听俺娘说过，俺老姥爷家住现在的山东省平原县，九十多年前，他八十多岁。当时方圆百里都知道他在阴间当差。俺老姥爷心眼好，人也勤快，经常给乡亲们治病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank">【命理】八字中怎样看子女？</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/8/n11708626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f72c63cef6247cb4eac123f052e8173d-150x120.png" align ="left"></a>八字看子女，简单来说，最常见的就是看子星和子女宫（简称指子宫，下同），子宫是指时柱地支。其次是看子女星。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank">天地清明引(143) 东流水－宫椽倾圮2</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/Peach_Festival_of_the_Queen_Mother_of_the_West_Freer_Gallery_of_Art-150x120.jpg" align ="left"></a>刑部大牢，金海困于此地已有三日之久。眼见残酷刑罚，耳听严刑拷打，口尝馊饭脏水，鼻闻血腥恶臭，每日每夜惊吓不已，胡思乱想，险些又疯癫过去。是日，牢门再开，被两个衙役拖了出去，一桶冰水从头浇到脚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:00 AM			</td></tr>
