--- a/gb/ncid280_9.md
+++ b/gb/ncid280_9.md
@@ -16,9 +16,9 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/7/n11307862.md#1" target="_blank">防空污？河南地方政府令农妇手割70亩小麦</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/7/n11307862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/237c4b2c75e88fcea13af982d063921d-150x120.jpg" align ="left"></a>“国以民为本，民以食为天。”但中共官员却为保“政绩”因噎废食。近日，河南省一村民收麦时被当地政府部门阻拦，禁用收割机，只能手割70亩小麦，为此耽误收成。而当局禁令的理由竟是，担心扬尘影响空气监测数据。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月08日 5:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/7/n11307768.md#1" target="_blank">湖南宁乡爆发非洲猪瘟 官方隐瞒疫情</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/7/n11307768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/image1-150x120.jpg" align ="left"></a>据美媒报导，湖南省宁乡市近期发生严重的非洲猪瘟疫情。但中共农业农村部和湖南省至今未公布相关疫情信息。有知情人披露，官方担心宁乡花猪品牌遭毁灭性打击而刻意隐瞒疫情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月08日 2:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11303174.md#1" target="_blank">“粮食杀手”大陆成灾 快速扩散至18省</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11303174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-954036212-600x400-150x120.jpg" align ="left"></a>在非洲猪瘟疫情持续蔓延之际，中国农业又遭遇重大冲击。自今年1月草地贪夜蛾入侵云南后，已快速蔓延至18省。有专家表示，草地贪夜蛾一旦迁飞到玉米主产区，将造成重大风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月06日 6:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11302799.md#1" target="_blank">亲历六四：那哭声、那泪水，永远不能忘记</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11302799.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190604110710100615-150x120.jpg" align ="left"></a>“我记得一切。”“我强迫自己记住他们的面孔，他们的声音，他们的哭喊，他们的泪水，甚至是他们生命的最后一口气息。”1989年6月4日当晚发生的那一切，李兰菊（Liane Lee）记忆犹新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月05日 11:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11301406.md#1" target="_blank">“六四”北京下冰雹 全国多地电闪雷鸣</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/5/n11301406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/5-4-150x120.jpg" align ="left"></a>6月4日，北京出现“六月飞雹”的恶劣天气，陕西韩城、四川遂宁、广州多地电闪雷鸣。网民称这是天怒人怨，上天在悲怜30年前天安门广场的“六四”冤魂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月05日 4:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/3/n11296625.md#1" target="_blank">纽约华人六四集会 百人声讨：暴政必亡</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/3/n11296625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/15a4c5b5ab942407_ttl7dayTIC_15a4c50d862fa591_ttl7dayKJW_d79803f85797fa47-150x120.jpg" align ="left"></a>由中国民主党、北京之春、中国民联、中国民阵等组织联合举办的“大纽约地区纪念六四民主运动三十周年烛光夜悼”于2日晚上在曼哈顿纽约中国领事馆附近河边举行，近百人参加，活动主题是：卅载艰辛，铸我荣光；正义必胜，暴政必亡。多位集会发言者揭示中共血腥屠城的真相，更呼吁“仅仅声讨是不够的，必须清算讨伐中共与罪恶者”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月03日 10:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/28/n11351809.md#1" target="_blank">四川雷波县一客车遭飞石砸中 已致3死14伤</a><br></h3>6月28日早上，一辆客车在四川省雷波县，被飞石砸中，导致3死14伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月28日 4:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/26/n11348162.md#1" target="_blank">高空抛砖 北京朝阳一小区一周发生三次</a><br></h3>连日来，北京市朝阳区新纪家园小区9号楼频频发生高空抛物事件，短短一个星期已经发生了三次，扔下来的全都是砖头，肇事者却至今没能找到，居民们已是谈“抛”色变。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月27日 6:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/24/n11342256.md#1" target="_blank">四川频繁地震 震区燕子成群飞舞引民众担忧</a><br></h3>四川宜宾市长宁县上周发生6级地震后，余震持续不断。今天（24日）上午，宜宾市珙县及长宁县再发生3.8级和4.1级地震。23日，震区有燕子成群飞舞，民众担心将发生大规模地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 4:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/22/n11340404.md#1" target="_blank">宜宾再有5.4级地震16人伤 1周3次超5级</a><br></h3>四川宜宾市珙县22日晚10点29分56秒，发生5.4级地震，震源深度10千米，震中位于北纬28.43度，东经104.77度。四川省地震局说，此次地震是长宁县17日6级地震的余震。截至23日凌晨零时30分，有16人受伤，均已送院抢救。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月23日 5:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/19/n11332095.md#1" target="_blank">大陆多地天气异常 张家口现龙卷风</a><br></h3>6月，大陆多地天气异常。17日，河北张家口市尚义县大苏计乡现龙卷风；5日吉林省榆林降雪。有网民表示，六月飞雪，有冤情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月19日 8:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/6/19/n11332857.md#1" target="_blank">广西百色市凌云县暴雨已致10死3伤</a><br></h3>广西百色市凌云县近期出现大到暴雨，截止19日中午12时30分，至少10人死亡，3人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月19日 7:45 PM							</td></tr>
