--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -23,14 +23,7 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733387.md#1" target="_blank">占星解析薄熙来死亡消息是否属实</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/56c0d94e553dd21194205ed8620b2d23-150x120.jpg" align ="left"></a>最近两天传出薄熙来在秦城监狱内死亡的消息，两年未露面的薄熙来之子薄瓜瓜被爆出在加拿大Power Corporation of Canada做分析师的新闻，甚至有人说薄熙来即将东山再起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/8/5/n2217455.md#1" target="_blank">侍郎异梦 告诫执法不可有私心</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/8/5/n2217455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/6cc19d48b9fd7b5a7b8d7884fb0f21cc-150x120.jpg" align ="left"></a>侍郎很欣赏他的勤劳，对他大加夸奖。主簿请示说：“大人除夕夜到此，现已三更了，天寒地冻的，我这儿有除夕酒肴，献上一杯，不知如何？”侍郎笑着接受了，喝了数杯，回到陶庄公馆。感到疲倦，于是解衣而卧，梦中依旧骑马巡河，但觉得所到之处，并非刚才看到的景色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/6/n1670570.md#1" target="_blank">漫谈中国舞：元代之《十六天魔舞》</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/6/n1670570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1809060032282357-150x120.jpg" align ="left"></a>元顺帝时期制作了赞美佛的乐舞《十六天魔舞》，舞蹈主要讲的是十六位天魔以菩萨的容貌出现，迷惑世人，后来被佛陀降伏的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 7:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736777.md#1" target="_blank">纪实散文：一夜惊梦（15）</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/21/n11736777.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15de2688b2e6dc75_ttl7dayZVN_shutterstock_85204393-1-1-150x120.jpg" align ="left"></a> 老王的女儿  
-
-
-有一天，先生对我说：“一个难友的女儿，专业英语八级，在家闲着，能否过来任教？”“好哇，有何不可？”
-
-几天之后，从胶东半岛来了一对父女。父亲人到中年，个头不高，那永远都在微笑的眼睛，和煦清澈，像清晨的一缕阳光，让人一见之下，顿生亲近之意。
-
-只是那个女儿，面色苍白，双目无神，坐在那里.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/24/n11742996.md#1" target="_blank">台湾古典诗：山中湖映富士山</a><br></h3> 微风淡荡趁悠闲，隐约纱笼富士山； 烟水苍茫横白鹭，金波潋滟绚斑斓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739882.md#1" target="_blank">唐浩：劝警</a><br></h3>毋为阶下奴
   勿沦手中魂
   认清红匪戏
